# shippable-code-review

./: .gitignore  AGENTS.md  README.md  package.json
docs/: architecture.md  skills.md  terminology.md
docs/concepts/: agent-context.md  guide-suggestions.md  review-state.md  symbol-graph-and-entry-points.md
mcp-server/: .npmrc  README.md  package-lock.json  package.json
product-analysis/: README.md  _group1-unification-notes.md  _group2-unification-notes.md  _group3-unification-notes.md  _group4-unification-notes.md  _group5-unification-notes.md  _group6-unification-notes.md  _group7-unification-notes.md  _group8-unification-notes.md  agent-context-panel.md  ai-inspector.md  anchored-comments.md  api-key-setup.md  block-comments.md  click-through-definitions.md  code-runner.md  commit-range-picker.md  context-expansion.md  custom-prompts.md  diff-view.md  file-sidebar.md  full-file-view.md  github-pr-ingest.md  guide-suggestions.md  keyboard-help.md  line-comments-and-replies.md  load-changeset.md  plan-diagram.md  product.md  prompt-library.md  prompt-results.md  rebuild-execution-review.md  rebuild-plan.md  rebuild-sequence.md  review-plan.md  review-progress.md  session-persistence.md  sign-off.md  suggested-architecture.md  themes.md  (+3 more)
scripts/: build-dmg.mjs  release.mjs  setup.mjs  start.mjs
server/: .npmrc  bunfig.toml  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  mcp_targets.rs  menu.rs
web/: detached.html  package-lock.json  package.json  vite.config.ts
(+217 files in other folders)
