[package]
name = "shippable"
version = "0.1.3"
description = "AI-assisted code review tool"
authors = ["Romina Suarez", "Luiz Reis"]
license = "GPL-2.0-or-later"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
keyring = { version = "3", features = ["apple-native"] }
toml_edit = "0.22"

# Enables Safari Web Inspector / right-click→Inspect in release builds. Off by
# default — flip on for debug DMGs by passing `--features devtools` to cargo.
# `scripts/build-dmg.mjs` does this when SHIPPABLE_DEVTOOLS is set in the env.
# Debug builds (`tauri dev`) already get devtools without this flag.
[features]
default = []
devtools = ["tauri/devtools"]
